# mauncher

./: .gitignore  .gitmodules  Makefile  README.md  Smakefile  mauncher-ipc.c  mauncher-ipc.h  mauncher-launcher.c  mauncher-win.c  mauncher-win.h  mauncher.c  meson.build  sysutil.c  sysutil.h
src/: main.c
subprojects/: gtk-layer-shell.wrap
